--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Maidang.github.com : personal pages" />
+    <meta name="description" content="Mai Dang personal site" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Maidang.github.com</title>
+    <title>Mai Dang</title>
   </head>
 
   <body>
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/maidang">View on GitHub</a>
+          <!--<a id="forkme_banner" href="https://github.com/maidang">View on GitHub</a>-->
 
-          <h1 id="project_title">Maidang.github.com</h1>
-          <h2 id="project_tagline">personal pages</h2>
+          <h1 id="project_title">Mai Dang</h1>
+          <!--<h2 id="project_tagline"></h2>-->
 
         </header>
     </div>
@@ -27,8 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
-
+        <h3>Hello Stranger!</h3>
+		<p>This is my personal site.  Content forthcoming.</p>
+<!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
@@ -55,15 +56,16 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
+	-->
 
     <!-- FOOTER  -->
+	<!--
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
+	-->
 
   </body>
 </html>
