new images and styles

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+Shoooooot ah don't look at the source! it's not ready for primetime!!
+-->
+
 <!DOCTYPE html>
 <html>
 
@@ -16,19 +20,32 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <!--<a id="forkme_banner" href="https://github.com/maidang">View on GitHub</a>-->
-
-          <h1 id="project_title">Mai Dang</h1>
+		<!--
+         <div id="forkme_banner">
+			<a class="icon facebook" href="http://www.facebok.com/mai.dang"></a>
+			<a class="icon youtube" href="http://www.youtube.com/mdster90"></a>
+			<a class="icon linkedin" href="http://www.linkedin.com/in/mtdang"></a>
+		 </div>
+		-->
+		
+          <h1 id="project_title">mai dang</h1>
           <!--<h2 id="project_tagline"></h2>-->
-
+			<nav id="navigation">
+				<ul>
+					<li><a href="index.html">home</a></li>
+					<li><a href="#">about me</a></li>
+					<li><a href="#">projects</a></li>
+				</ul>
+			</nav>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Hello Stranger!</h3>
-		<p>This is my personal site.  Content forthcoming.</p>
+        <h3>Howdy stranger</h3>
+		<p>I'm Mai.  Thanks for visiting my personal site! I recently graduated from University of Washington and am now a software engineer living in Seattle.  This site is still getting up - more content forthcoming.</p>
+
 <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -50,22 +67,19 @@ $ git checkout gh-pages
 <h3>Authors and Contributors</h3>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+-->
+	<h3>Contact</h3>
 
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+	<p>If you'd like to contact me, feel free to send as message to my <a href="http://www.linkedin.com/in/mtdang">LinkedIn profile</a> in the meantime. Thanks!
       </section>
     </div>
-	-->
 
     <!-- FOOTER  -->
-	<!--
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-	-->
 
   </body>
 </html>
