--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Shoooooot ah don't look at the source! it's not ready for primetime!!
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>Howdy stranger</h3>
-		<p>I'm Mai.  Thanks for visiting my personal site! I recently graduated from University of Washington and am now a software engineer living in Seattle.  This site is still getting up - more content forthcoming.</p>
+		<p>I'm Mai.  Thanks for visiting my personal site! I recently graduated from University of Washington and am now a software engineer living in Seattle.  This site is still getting set up - more content forthcoming.</p>
 
 <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -70,7 +70,7 @@ $ git checkout gh-pages
 -->
 	<h3>Contact</h3>
 
-	<p>If you'd like to contact me, feel free to send as message to my <a href="http://www.linkedin.com/in/mtdang">LinkedIn profile</a> in the meantime. Thanks!
+	<p>If you'd like to contact me, feel free to send a message to my <a href="http://www.linkedin.com/in/mtdang">LinkedIn profile</a> in the meantime. Thanks!
       </section>
     </div>
 
