--- a/choir/index.html
+++ b/choir/index.html
@@ -36,8 +36,59 @@ it's not ready for primetime!!
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-		<img src="..\images\choir.JPG"/>
-		<p id="signature">From the St. Francis Choir</p>
+		<img src="..\images\choir_xmas_2013.JPG"/>
+		<h3>To the choir:</h3>
+		<p>
+		Another year so fast has passed</br>
+		And many things have changed.</br>
+		Yet through it all we have stood firm</br>
+		A choir of humble faith
+		</p>
+		
+		<p>
+		We may not be too flashy</br>
+		We are not singers pro,</br>
+		But when we sing, we sing as one</br>
+		We give our best each go.</br>
+		</p>
+		
+		<p>
+		The best part of the choir</br>
+		Is the friendship that we share,</br>
+		We are a team that has much fun,</br>
+		Spreading song with joy and care.</br>
+		</p>
+		
+		<p>
+		Practice maketh perfect,</br>
+		Or so the saying goes,</br>
+		You put in your hours,</br>
+		And sing out those bars,</br>
+		And soon the result will show
+		</p>
+		
+		<p>
+		And it shows!
+		</p>
+		
+		<p>
+		In all that we do,</br>
+		We are much improved,</br>
+		And keep getting better and better,</br>
+		So let's stay the same,</br>
+		A family that's game,</br>
+		To sing for our Lord and our master.
+		</p>
+		<p class="signature">-Antonio</p>
+		
+		<br/>
+		<img src="../images/choir.JPG"/>
+		
+		<h3>Dear friends,</h3>
+		<p>
+		Merry Christmas! It has always been a pleasure to sing and play with you every month.  Thank you and your family for your commitment to the choir and performing every month.  Our choir is still my favorite of all the choirs I've played for :)  I'm proud how far we've come! Have a wonderful, blessed Christmas Day and happy New Year.
+		</p>
+		<p class="signature">-Mai</p>
       </section>
     </div>
 
