--- a/choir/index.html
+++ b/choir/index.html
@@ -36,7 +36,7 @@ it's not ready for primetime!!
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-		<img src="..\images\choir_xmas_2013.JPG"/>
+		<img src="../images/choir_xmas_2013.jpg"/>
 		<h3>To the choir:</h3>
 		<p>
 		Another year so fast has passed</br>
@@ -82,7 +82,7 @@ it's not ready for primetime!!
 		<p class="signature">-Antonio</p>
 		
 		<br/>
-		<img src="../images/choir.JPG"/>
+		<img src="../images/choir.jpg"/>
 		
 		<h3>Dear friends,</h3>
 		<p>
