fixed capitalized jpg

--- a/choir/index.html
+++ b/choir/index.html
@@ -82,7 +82,7 @@ it's not ready for primetime!!
 		<p class="signature">-Antonio</p>
 		
 		<br/>
-		<img src="../images/choir.jpg"/>
+		<img src="../images/choir.JPG"/>
 		
 		<h3>Dear friends,</h3>
 		<p>
