text fix again lol

--- a/choir/index.html
+++ b/choir/index.html
@@ -86,7 +86,7 @@ it's not ready for primetime!!
 		
 		<h3>Dear friends,</h3>
 		<p>
-		Merry Christmas! It has always been a pleasure to sing and play with you every month.  Thank you and your families for your commitment to the choir and performing every month.  Our choir is still my favorite of all the choirs I've played for :)  I'm proud how far we've come! Have a wonderful, blessed Christmas Day and happy New Year.
+		Merry Christmas! It has always been a pleasure to sing and play with you these past six years.  Thank you and your families for your commitment to the choir and performing every month.  Our choir is still my favorite of all the choirs I've played for :)  I'm proud of how far we've come! Have a wonderful, blessed Christmas Day.
 		</p>
 		<p class="signature">-Mai</p>
       </section>
