Add stendig calendar proj

--- a/tree/index.html
+++ b/tree/index.html
@@ -21,15 +21,15 @@ it's not ready for primetime!!
 	<div id="data">
 		<h1>Data</h1>
 		<textarea id="treeXml" rows="35" cols="50">
-<person name="chanh dang">
-	<person name="nhung dang" type="spouse" />
-	<person name="mary dang" type="child" />
-	<person name="teresa dang" type="child" />
-	<person name="mai dang" type="child" />
+<person name="Nhung Dang">
+	<person name="Chanh Dang" type="spouse" />
+	<person name="Mary Dang" type="child" />
+	<person name="Teresa Dang" type="child" />
+	<person name="Mai Dang" type="child" />
 </person>
 		</textarea>
 		<p>
-			<button id="generate">Generate tree!!!</button>
+			<button id="generate">Generate tree > </button>
 		</p>
 	</div>
 	
